--- a/ring.css
+++ b/ring.css
@@ -1,48 +1,5 @@
-body {
-    background-color: white;
-    font-family: 'Open Sans', sans-serif;
-    color: #333;
-    width: 960px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-h1 {
-    font-size: 4em;
-    margin-bottom: 0;
-}
-
-header p {
-    font-weight: 300;
-    font-size: 1.2em;
-    margin: 1em 0;
-}
-
-a,
-a:hover,
-a:active,
-a:visited,
-footer {
-    color: #999;
-}
-
 section {
-    border: 7px solid #ddd;
-    height: 400px;
-    margin: 2em 0;
-    position: relative;
-    overflow: hidden;
-    width: 960px;
-    box-shadow: 0 0 15px 0 #555 inset;
-    background-color: #F7F6F4;
-    text-align: center;
-}
-
-#gh-ribbon {
-    border: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
+    background-color: #0e2a36;
 }
 
 svg {
@@ -50,11 +7,7 @@ svg {
     height: 200px;
     position: absolute;
     left: 50%;
-    top: 50%;
     margin-left: -100px;
+    top: 50%;
     margin-top: -100px;
-}
-
-input {
-    margin-top: 350px;
 }
